test/libsolidity/syntaxTests/modifierAreas/visibility/invalid/nested_discrepancy.sol
contract C {
    apply public {
        apply private {}
    }
}
// ----
// ParserError: (46-53): Cannot override parent modifier area's visibility of "public".
